# twors

./: Cargo.toml  LICENSE  Makefile.toml  README.md  bacon.toml
assets/: index.html
docs/: contributing.md  quick_start.md
examples/playground/: Cargo.toml
examples/playground/assets/: index.html
examples/playground/src/: battlefield.rs  bomb.rs  excrement.rs  lib.rs  player.rs  sand_field.rs
examples/playground/src/player/: eye.rs  head.rs  mouth.rs
licenses/: licenses.html
macros/: Cargo.toml
macros/src/: lib.rs
src/: canvas.rs  dimensions.rs  engine.rs  entry.rs  error.rs  lib.rs  main_loop.rs  prelude.rs  shape_factory.rs  vertex2.rs  wasm_assert.rs
src/engine/: animation_frame.rs  component.rs  input.rs  renderer.rs
src/engine/component/: transform.rs
src/engine/input/: event_listener.rs  key_state_map.rs  keyboard.rs  mouse.rs
twors_derive/: Cargo.toml
twors_derive/src/: child_component.rs  lib.rs
twors_derive/src/field_validator/: renderable.rs  transform.rs
