[workspace]
members = ["examples/playground", "twors_derive"]

[package]
name = "twors"
version = "0.4.0"
edition = "2024"
authors = ["Lyudmil Grigorov"]
description = "A simple Rust 2D game engine based on canvas and WASM"
readme = "README.md"
repository = "https://github.com/vimlucid/twors"
license = "MIT"
keywords = ["game", "engine", "2d", "wasm", "canvas"]
categories = ["wasm", "rendering::engine", "graphics", "web-programming", "game-engines"]

# TODO: Exclude necessary files from packaging
exclude = []

[dependencies]
# Public
web-sys = { version = "0.3.77", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "KeyboardEvent", "MouseEvent", "Window"] }
twors_derive = { path = "./twors_derive" }

# Private
log = "0.4.27"
thiserror = "2.0.12"
wasm-bindgen = "0.2.100"
web-time = "1.1.0"

# Docs
console_log = "1.0.0"
